// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CommissionBounds  /> should match snapshot when empty 1`] = `
<body>
  <div>
    No bounds set (0% - 100%)
  </div>
</body>
`;

exports[`<CommissionBounds  /> should match snapshot with active bounds 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  font-size: 18px;
  line-height: 24px;
}

<body>
  <div>
    <div
      class="c0"
    >
      <span
        class="c1"
      >
        <strong>
          10% - 20%
        </strong>
         at current Epoch 50
      </span>
    </div>
  </div>
</body>
`;

exports[`<CommissionBounds  /> should match snapshot with provided bounds 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  font-size: 18px;
  line-height: 24px;
}

<body>
  <div>
    <div
      class="c0"
    >
      <span
        class="c1"
      >
        10% - 20% starting from Epoch 0
      </span>
    </div>
  </div>
</body>
`;
